--- a/src/components/Movies/style.css
+++ b/src/components/Movies/style.css
@@ -11,12 +11,18 @@
   margin: 0px 10px;
 }
 
-.movieDetail>.movieTitle {
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+.movieDetail > .movieTitle {
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
   margin-bottom: 5px;
 }
 
+.movieTitle:hover {
+  color: pink;
+}
+
 .movieImage {
+  width: 30%;
   flex: 1;
   border: 1px solid gray;
   border-radius: 10px;
@@ -32,5 +38,10 @@
 }
 
 .bad {
+  color: red;
+}
+
+.movieYear {
+  font-size: 0.5rem;
   color: red;
 }
