--- a/src/components/Movies/style.css
+++ b/src/components/Movies/style.css
@@ -45,3 +45,19 @@
   font-size: 0.5rem;
   color: red;
 }
+
+.movieGood {
+  color: blue;
+}
+
+.movieSoso {
+  color: orange;
+}
+
+.movieBad {
+  color: red;
+}
+
+.moiveGenre {
+  color: gray;
+}
