fix: movie image height 100px

--- a/src/components/Movies/style.module.scss
+++ b/src/components/Movies/style.module.scss
@@ -22,8 +22,7 @@
 }
 
 .movieImage {
-  width: 30%;
-  flex: 1;
+  height: 100px;
   border: 1px solid $gray;
   border-radius: $space-md;
   margin: $space-md;
